Handle Spotify Auth ")

--- a/views/slack-success.handlebars
+++ b/views/slack-success.handlebars
@@ -9,7 +9,7 @@
 
   <body>
     Slack auth done!
-    <a>Spotify now...</a>
+    <a href="https://accounts.spotify.com/authorize?client_id={{{spotifyClientID}}}&response_type=code&redirect_uri={{{host}}}/spotify&scope=user-read-playback-state&state={{{userID}}}">Spotify now...</a>
 
   </body>
 
