--- a/views/main.html
+++ b/views/main.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Slotify</title>
+  <title>Musa</title>
   <style>
     * {
       box-sizing: border-box;
@@ -89,7 +89,7 @@
       line-height: 1.25;
     }
 
-    .slotify {
+    .musa {
       text-decoration: underline double rgb(30, 215, 96) 3px;
       text-underline-offset: 0.75rem;
     }
@@ -174,12 +174,12 @@
   </header>
   <main>
     <div class="main-wrapper">
-      <div class="welcome">Welcome to <span class="slotify">Slotify!</span></div>
+      <div class="welcome">Welcome to <span class="musa">Musa!</span></div>
       <div class="wave">👋</div>
-      <div class="description">Slotify is a bridge between Spotify and Slack to set a user’s status as the song they
+      <div class="description">Musa is a bridge between Spotify and Slack to set a user’s status as the song they
         are listening to.</div>
       <div class="preview"><img src="https://cloud-93teffpp1-hack-club-bot.vercel.app/0slack_07-30-2021_08.33.15_pm.png"
-          alt="Preview of a Slotify-set status" class="preview-image"></div>
+          alt="Preview of a Musa-set status" class="preview-image"></div>
       <!-- get new one and host in folder -->
       <div class="instructions">To begin, click the button below, then follow the prompts:
 
