--- a/views/done.html
+++ b/views/done.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Next Step...</title>
+  <title>All Done!</title>
 
   <style>
     * {
@@ -15,29 +15,38 @@
     body {
       font-family: "Graphik", "Avenir Next", "Inter", "Nunito Sans", BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       text-align: center;
-      font-size: 1.5rem;
+      font-size: 1.25rem;
 
       background-color: #fff;
     }
 
-    a {
+    p.done {
       text-decoration: underline double rgb(30, 215, 96) 3px;
-      text-underline-offset: 0.6rem;
+      text-underline-offset: 0.5rem;
+      font-size: 1.5rem;
     }
 
-    a:hover {
+    p.done:hover {
       text-decoration-color: blue;
       transition-property: text-underline-color;
       transition-duration: 300ms;
+    }
+
+    p>small {
+      font-size: 0.5em;
     }
   </style>
 </head>
 
 <body>
-  <div>Slack auth done!</div>
-  <div><a
-      href="https://accounts.spotify.com/authorize?client_id={{{spotifyClientID}}}&response_type=code&redirect_uri={{{host}}}/spotify&scope=user-read-playback-state&state={{{userID}}}">Spotify
-      now...</a></div>
+  <div>
+    <p class="done">Done!</p>
+  </div>
+  <div>
+    <p>Go check it out in Slack!</p>
+    <p><small>(but make sure you're listening to something first:)</small></p>
+  </div>
+
 
 
 </body>
